# GameOfLifeSFML

./: .gitignore  CMakeLists.txt  README.md  build_run.sh  config.h.in  main.cpp
private/: Game.cpp  Grid.cpp
public/: Game.hpp  Grid.hpp
